--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html>
+<title>HCM 2023</title> 
+<meta charset="UTF-8">  
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata"> 
+<style>
+body, html {
+  height: 100%;  
+  font-family: "Inconsolata", sans-serif; 
+}
+/* .bgimg {
+  background: url("bimg-ai-3.jpg") 0% 10% no-repeat	#070f17;
+  min-height: 50%; 
+  background-size: contain;
+  background-position: left;   
+  z-index:-10;  
+}   */
+ 
+/*  can not use radial-gradient(#06121e, #00050f) */
+/* .bgimg { 
+  background: url("AI_imag2.jpg") 0% 20% no-repeat,linear-gradient(to bottom, #06121e, #00050f);  
+  height: 80%;
+  min-height: 50%;    
+  background-size: contain;  
+  background-position: left;  
+  background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+}  */
+  
+.bgimg {
+  height: 30%;
+  background-position: center 0;  
+  background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+} 
 
+h1 {
+    font-size: 40px;
+}
