--- a/index.html
+++ b/index.html
@@ -41,3 +41,36 @@ body, html {
 h1 {
     font-size: 40px;
 }
+h2 {
+    font-size: 32px;
+    border-bottom: 1px solid #cccccc;
+    color: black;
+}
+
+.menu {  
+  display: none;
+}
+
+.bold { font-weight: bold; }
+.red { color: #FF0000; }
+
+</style>
+<body>
+
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-black w3-card w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-black" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+    <a href="https://hpca-conf.org/2023/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Venue</a>
+    <a href="#cfp" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Call for Papers</a>
+    <a href="#dates" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Important Dates</a>
+    <a href="#committees" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Committees</a>
+  </div>
+</div>
+  
+<!-- Header with image -->
+<!-- <header class="bgimg w3-display-container w3-grayscale-min" id="home">
+  <div class="w3-display-middle w3-center">
+    <span class="w3-text-white" style="font-size:50px">AI4S<br>Workshop on Artificial Intelligence and Machine Learning for Scientific Applications </span>
+  </div>
