--- a/index.html
+++ b/index.html
@@ -72,5 +72,8 @@ h2 {
 <!-- Header with image -->
 <!-- <header class="bgimg w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:50px">AI4S<br>Workshop on Artificial Intelligence and Machine Learning for Scientific Applications </span>
+    <span class="w3-text-white" style="font-size:50px">
+         HiPChips Conference <br>
+         International Workshop on High Performance Chiplets and Interconnect Architectures
+    </span>
   </div>
