Fix the speaker part.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ resources to work seamlessly across various software ecosystems.
   Dr. Weifeng Zhang is the Chief Architect and VP of Software at Lightelligence Inc, 
   responsible for hardware software co-design and software ecosystem to enpower optical 
   computing and interconnect technologies. Prior to joining Lightelligence, Weifeng was a fellow 
-  of Alibaba Cloud and the Chief Scientist of HeterogeneousComputing at Alibaba Cloud
+  of Alibaba Cloud and the Chief Scientist of Heterogeneous Computing at Alibaba Cloud
   Infrastructure. He currently is the Tech Chair of AI Co-Design Workgroup at 
   Open Computing Project Foundation (OCP) and was also a founding member of 
   the Board of Directors at MLCommons&#8482; (MLPerf&#8482;). Weifeng received his PhD 
@@ -144,7 +144,7 @@ IIT-Bombay, MSEE from UCLA and MBA from UC-Berkeley (Haas).
     <div class="w3-content">
       <h2>Speakers</h2>
         <h5 class="w3-text-black">
-          <p>Currently still being invited. Will publish the speaker list soon.</p>
+          <p>We are currently inviting speakers from both industry and academia. Will publish the speaker list soon.</p>
         </h5>
     </div>
   </div>   
