Change the background color

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
   
 <!-- Header with image -->
-<header class= "bgimg w3-display-container w3-grayscale-min" style="background-color:lightgray" id="head">
+<header class= "bgimg w3-display-container w3-grayscale-min" style="background-color:pink-lightgray" id="head">
   <div class="w3-display-middle w3-center">
     <h1 style="text-align: center;" id="t1">The HiPChips Conference</h1>
   </div>
