Change to side bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       font-family: "Inconsolata", sans-serif; 
     }
     .bgimg {
-      height: 20%;
+      height: 15%;
       background-position: center 0;  
       background-size: cover;
       -webkit-background-size: cover;
@@ -36,18 +36,19 @@
 <body>
     <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-black w3-card w3-left-align w3-large">
+  <div class="w3-sidebar w3-black w3-card w3-left-align w3-large" style="width:min-content">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-black" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#head" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-    <a href="https://hpca-conf.org/2023/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Venue</a>
+    <a href="#head" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
     <a href="#intro" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Introduction</a>
     <a href="#organizers" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Organizers</a>
     <a href="#speakers" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Speakers</a>
-  </div>
+    <a href="#schedule" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Schedule</a>
+    <a href="https://hpca-conf.org/2023/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Venue</a>
+ </div>
 </div>
   
 <!-- Header with image -->
-<header class= "bgimg w3-display-container w3-grayscale-min" style="background-color:pink-lightgray" id="head">
+<header class= "bgimg w3-display-container w3-grayscale-min" style="background-color:gray" id="head">
   <div class="w3-display-middle w3-center">
     <h1 style="text-align: center;" id="t1">The HiPChips Conference</h1>
   </div>
@@ -145,6 +146,15 @@ IIT-Bombay, MSEE from UCLA and MBA from UC-Berkeley (Haas).
       <h2>Speakers</h2>
         <h5 class="w3-text-black">
           <p>We are currently inviting speakers from both industry and academia. Will publish the speaker list soon.</p>
+        </h5>
+    </div>
+  </div>   
+
+  <div class="w3-row-padding w3-padding-16 w3-container" id="schedule">
+    <div class="w3-content">
+      <h2>Schedule</h2>
+        <h5 class="w3-text-black">
+          <p>Under planing.</p>
         </h5>
     </div>
   </div>   
