Update conference venue

--- a/index.html
+++ b/index.html
@@ -36,29 +36,29 @@
 <body>
     <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-sidebar w3-black w3-card w3-left-align w3-large" style="width:min-content">
+  <div class="w3-sidebar w3-black w3-card w3-left-align w3-large" style="width:min-content; opacity:90%; ">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-black" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#head" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
-    <a href="#intro" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Introduction</a>
-    <a href="#organizers" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Organizers</a>
-    <a href="#speakers" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Speakers</a>
-    <a href="#schedule" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Schedule</a>
-    <a href="https://hpca-conf.org/2023/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Venue</a>
+    <a href="#head" class="w3-bar-item w3-button w3-padding-large w3-hover-blue">Home</a>
+    <a href="#intro" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-blue">Introduction</a>
+    <a href="#organizers" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-blue">Organizers</a>
+    <a href="#speakers" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-blue">Speakers</a>
+    <a href="#schedule" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-blue">Schedule</a>
+    <a href="#venue" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-blue">Venue</a>
  </div>
 </div>
   
 <!-- Header with image -->
 <header class= "bgimg w3-display-container w3-grayscale-min" style="background-color:lightgray" id="head">
   <div class="w3-display-middle w3-center">
-    <h1 style="text-align: center;" id="t1">The HiPChips Conference</h1>
+    <h1 style="text-align: center;" id="t1">The HiPChips Conference at HPCA-2023</h1>
   </div>
 </header>
   
     <h4 style="text-align: center;">The 2nd International Workshop on</h4>
     <h3 style="text-align: center;">High Performance Chiplet and Interconnnect Architectures (<strong>HiPChips</strong>) </h3>
-    <h4 style="text-align: center;">Colocated with &nbsp;<a href="https://hpca-conf.org/2023/" style="color: blue">HPCA 2023</a></h4>
-    <h4 style="text-align: center;">February 26th, Montreal, QC, Canada</h4>
-    <center><img src="./images/hipchips3.jpg" width="15%" height="auto"> </center>
+    <h4 style="text-align: center;">Montreal, QC, Canada</h4>
+    <h4 style="text-align: center;">February 26th, 2023</h4>
+  <center><img src="./images/hipchips3.jpg" width="20%" height="auto"> </center>
   
 <div class="w3-row-padding w3-padding-16 w3-container" id="intro">
   <div class="w3-content">          
@@ -155,6 +155,17 @@ IIT-Bombay, MSEE from UCLA and MBA from UC-Berkeley (Haas).
       <h2>Schedule</h2>
         <h5 class="w3-text-black">
           <p>Under planing.</p>
+        </h5>
+    </div>
+  </div>   
+    <div class="w3-row-padding w3-padding-16 w3-container" id="venue">
+    <div class="w3-content">
+      <h2>Venue</h2>
+        <h5 class="w3-text-black">
+          <p>HiPChips Conference is colocated with &nbsp;<a href="https://hpca-conf.org/2023/" style="color: blue">HPCA 2023</a><br>
+             The 29th IEEE International Symposium on High-Performance Computer Architecture (HPCA-29)<br>
+             Montreal, Quebec, Canada
+          </p>
         </h5>
     </div>
   </div>   
