--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="w3-top">
   <div class="w3-sidebar w3-black w3-card w3-left-align w3-large" style="width:min-content; opacity:90%; ">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-black" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#head" class="w3-bar-item w3-button w3-padding-large w3-hover-blue">Home</a>
+    <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-hover-blue">Home</a>
     <a href="#intro" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-blue">Introduction</a>
     <a href="#organizers" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-blue">Organizers</a>
     <a href="#speakers" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-blue">Speakers</a>
@@ -48,7 +48,7 @@
 </div>
   
 <!-- Header with image -->
-<header class= "bgimg w3-display-container w3-grayscale-min" style="background-color:lightgray" id="head">
+<header class= "bgimg w3-display-container w3-grayscale-min" style="background-color:lightgray" id="home">
   <div class="w3-display-middle w3-center">
     <h1 style="text-align: center;" id="t1">The HiPChips Conference at HPCA-2023</h1>
   </div>
