--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 <!-- Header with image -->
 <header class= "bgimg w3-display-container w3-grayscale-min" style="background-color:lightgray" id="home">
   <div class="w3-display-middle w3-center">
-    <h1 style="text-align: center;" id="t1">The HiPChips Conference at HPCA-2023</h1>
+    <h1 style="text-align: center;" id="t1">The HiPChips Conference</h1>
   </div>
 </header>
   
     <h4 style="text-align: center;">The 2nd International Workshop on</h4>
     <h3 style="text-align: center;">High Performance Chiplet and Interconnnect Architectures (<strong>HiPChips</strong>) </h3>
-    <h4 style="text-align: center;">Montreal, QC, Canada</h4>
+    <h4 style="text-align: center;">Co-located with &nbsp;<a href="https://hpca-conf.org/2023/" style="color: blue">HPCA 2023</a> at Montreal, Canada</h4>
     <h4 style="text-align: center;">February 26th, 2023</h4>
   <center><img src="./images/hipchips3.jpg" width="20%" height="auto"> </center>
   
