--- a/index.html
+++ b/index.html
@@ -117,13 +117,9 @@ resources to work seamlessly across various software ecosystems.
         </h5>
         <h5 class="w3-text-black">
           <p><strong>Dharmesh Jani, Meta Platforms</strong></p>
-Dharmesh Jani (‘DJ’) is Ecosystem and Partnership lead at Meta and has been an 
-active member of OCP since 2012. He is also co-chair of the OCP Incubation 
-Committee and involved in multiple OCP projects such as 
-Open Domain Specific Accelerator (ODSA) and Sustainability. 
-Prior to Meta, he has worked in Fortune 500 companies leading product development 
-as well as in startups building zero to one businesses. He has BTech from 
-IIT-Bombay, MSEE from UCLA and MBA from UC-Berkeley (Haas).
+Dharmesh Jani (‘DJ’) leads Infrastructure Technology Ecosystem and Partnerships at Meta and has been an active member of OCP since 2012. He is also co-chair of the OCP Incubation 
+Committee, board member of UCIe consortium and has launched multiple projects such Sustainability in Open Compute Project (OCP). Prior to Meta, he has worked in Fortune 500 companies leading product development 
+as well as in startups building zero to one businesses. He has BTech from IIT-Bombay, MSEE from UCLA and MBA from UC-Berkeley (Haas).
         </h5>
         <h5 class="w3-text-black">
           <p><strong>Vijay Janapa Reddi, Harvard University</strong></p>
