--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ resources to work seamlessly across various software ecosystems.
         <h5 class="w3-text-black">
           <p><strong>Dharmesh Jani, Meta Platforms</strong></p>
 Dharmesh Jani (‘DJ’) leads Infrastructure Technology Ecosystem and Partnerships at Meta and has been an active member of OCP since 2012. He is also co-chair of the OCP Incubation 
-Committee, board member of UCIe consortium and has launched multiple projects such Sustainability in Open Compute Project (OCP). Prior to Meta, he has worked in Fortune 500 companies leading product development 
+Committee where he started the OCP strategic initiatives, launched multiple projects such Sustainability and is a founding member of the Board of Directors for UCIe consortium. Prior to Meta, he has worked in Fortune 500 companies leading product development 
 as well as in startups building zero to one businesses. He has BTech from IIT-Bombay, MSEE from UCLA and MBA from UC-Berkeley (Haas).
         </h5>
         <h5 class="w3-text-black">
