--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@ resources to work seamlessly across various software ecosystems.
   <li> Power evaluation and performance modeling of chiplet architectures </li>
         </p>
   </h5>
+          
+    <h5 class="w3-text-black">:
+        <p>
+          For any submission information, please send your requests to <strong> hipchips2023@gmail.com</strong>
+        </p>
+  </h5>
   </div>
   </div>
 
