Fix the email info

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ resources to work seamlessly across various software ecosystems.
         </p>
   </h5>
           
-    <h5 class="w3-text-black">:
+    <h5 class="w3-text-black">
         <p>
-          For any submission information, please send your requests to <strong> hipchips2023@gmail.com</strong>
+          For any submission information, please send your requests to organizers at <strong> hipchips2023@gmail.com</strong>
         </p>
   </h5>
   </div>
