Add the preliminary time to the schedule

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
     <div class="w3-content">
       <h2>Schedule</h2>
         <h5 class="w3-text-black">
+          <p>Sunday Feb 26th, 2023, 1:00pm - 5:00pm (local time)</p>
           <p>Under planing.</p>
         </h5>
     </div>
