--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ resources to work seamlessly across various software ecosystems.
         <h5 class="w3-text-black">
           <p> <strong>Weifeng Zhang, Lightelligence</strong> </p>
   Dr. Weifeng Zhang is the Chief Architect and VP of Software at Lightelligence Inc, 
-  responsible for hardware software co-design and software ecosystem to enpower optical 
+  responsible for hardware software co-design and software ecosystem to empower optical 
   computing and interconnect technologies. Prior to joining Lightelligence, Weifeng was a fellow 
   of Alibaba Cloud and the Chief Scientist of Heterogeneous Computing at Alibaba Cloud
   Infrastructure. He currently is the Tech Chair of AI Co-Design Workgroup at 
