--- a/index.html
+++ b/index.html
@@ -147,7 +147,88 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
     <div class="w3-content">
       <h2>Speakers</h2>
         <h5 class="w3-text-black">
-          <p>We are currently inviting speakers from both industry and academia. Will publish the speaker list soon.</p>
+
+<li> <strong>Dr. Huaiyu Meng, Co-Founder & CTO</strong>, Lightelligence, Inc </li>
+<li> <strong>Dr. Kaisheng Ma, Professor</strong>, Tsinghua University </li>
+<li> <strong>John Wuu & Nathan, Sr Fellow</strong>, AMD </li>
+<li> <strong>Eduardo Ramirez, Vice President</strong>, ARM </li>
+<li> <strong>Dr. Debendra, UCIe Chair</strong>, Intel </li>
+<li> <strong>Dr. Sajjad Moazeni, Professor</strong>, University of Washington </li>
+<li> <strong>Dr. Vijay Janna Reddi, Professor</strong>, Harvard University </li>
+          
+<!-- 
+ <table border="1" cellpadding="0" cellspacing="0" style="width:100%">
+	<tbody>
+		<tr>
+			<th>Session</th>
+			<th>Speaker</th>
+			<th>Institution(Company)</th>
+			<th>Title</th>
+		</tr>
+		<tr>
+			<td align="left" style="vertical-align:middle">Open Remarks</td>
+			<td align="left" style="vertical-align:middle">Dharmesh Jani, Co-Chair of OCP Incubation</td>
+			<td align="left" style="vertical-align:middle"> &nbsp;</td>
+			<td align="center" style="vertical-align:middle"> &nbsp;</td>
+		</tr>
+		<tr>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Huaiyu Meng, Co-Founder & CTO</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"> Lightelligence, Inc </td>
+			<td align="center" style="background-color:aqua; vertical-align:middle"></td>
+		</tr>
+		<tr>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Kaisheng Ma, Professor</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle">Tsinghua University</td>
+			<td align="center" style="background-color:aqua; vertical-align:middle">  &nbsp; </td>
+		</tr>
+		<tr>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>John Wuu & Nathan, Sr Fellow</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"> AMD </td>
+			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
+		</tr>
+    <tr>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Eduardo Ramirez, VP</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"> ARM </td>
+			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
+		</tr>
+
+		<tr>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Coffee Break</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"> &nbsp;  </td>
+			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp;</td>
+		</tr>
+		<tr>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Debendra, UCIe Chair</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"> Intel </td>
+			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
+		</tr>    
+		<tr>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Sajjad Moazeni, Professor</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"> University of Washington </td>
+			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
+		</tr>
+		<tr>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Vijay Janna Reddi, Professor</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"> Harvard University </td>
+			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
+		</tr>
+		<tr>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Close Remark</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Weifeng Zhang, Chief Architect & VP</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
+			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp;</td>
+		</tr>
+  </tbody>
+ </table>
+-->
         </h5>
     </div>
   </div>   
