--- a/index.html
+++ b/index.html
@@ -148,14 +148,24 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Speakers</h2>
         <h5 class="w3-text-black">
 
-<li> <strong>Dr. Huaiyu Meng, Co-Founder & CTO</strong>, Lightelligence, Inc </li>
-<li> <strong>Dr. Kaisheng Ma, Professor</strong>, Tsinghua University </li>
-<li> <strong>John Wuu & Nathan, Sr Fellow</strong>, AMD </li>
-<li> <strong>Eduardo Ramirez, Vice President</strong>, ARM </li>
-<li> <strong>Dr. Debendra, UCIe Chair</strong>, Intel </li>
-<li> <strong>Dr. Sajjad Moazeni, Professor</strong>, University of Washington </li>
-<li> <strong>Dr. Vijay Janna Reddi, Professor</strong>, Harvard University </li>
+<li> <strong>Dr. Huaiyu Meng</strong>, Co-Founder & CTO, Lightelligence, Inc </li>
+<li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
+<li> <strong>Dr. John Wuu</strong>, Sr Fellow, AMD </li>
+<li> <strong>Eduardo Ramirez</strong>, Vice President, ARM </li>
+<li> <strong>Dr. Debendra</strong>, UCIe Chair, Intel </li>
+<li> <strong>Dr. Sajjad Moazeni</strong>, Professor, University of Washington </li>
+<li> <strong>Dr. Vijay Janna Reddi</strong>, Professor, Harvard University </li>
           
+        </h5>
+    </div>
+  </div>   
+
+  <div class="w3-row-padding w3-padding-16 w3-container" id="schedule">
+    <div class="w3-content">
+      <h2>Schedule</h2>
+        <h5 class="w3-text-black">
+          <p>Sunday Feb 26th, 2023, 1:00pm - 5:00pm (local time)</p>
+          <p>Under planing.</p>
 <!-- 
  <table border="1" cellpadding="0" cellspacing="0" style="width:100%">
 	<tbody>
@@ -229,17 +239,8 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
   </tbody>
  </table>
 -->
-        </h5>
-    </div>
-  </div>   
-
-  <div class="w3-row-padding w3-padding-16 w3-container" id="schedule">
-    <div class="w3-content">
-      <h2>Schedule</h2>
-        <h5 class="w3-text-black">
-          <p>Sunday Feb 26th, 2023, 1:00pm - 5:00pm (local time)</p>
-          <p>Under planing.</p>
-        </h5>
+		
+	</h5>
     </div>
   </div>   
     <div class="w3-row-padding w3-padding-16 w3-container" id="venue">
