Fix speaker last name

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 <li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
 <li> <strong>Dr. John Wuu</strong>, Sr Fellow, AMD </li>
 <li> <strong>Eduardo Ramirez</strong>, Vice President, ARM </li>
-<li> <strong>Dr. Debendra</strong>, UCIe Chair, Intel </li>
+<li> <strong>Dr. Debendra Das Sharma</strong>, UCIe Chair, Intel </li>
 <li> <strong>Dr. Sajjad Moazeni</strong>, Professor, University of Washington </li>
-<li> <strong>Dr. Vijay Janna Reddi</strong>, Professor, Harvard University </li>
+<li> <strong>Dr. Vijay Janapa Reddi</strong>, Professor, Harvard University </li>
           
         </h5>
     </div>
