--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		</tr>
 		<tr>
 			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Debendra, UCIe Chair</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Debendra Das Sharma, UCIe Chair</strong></td>
 			<td align="left" style="background-color:aqua; vertical-align:middle"> Intel </td>
 			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
 		</tr>    
@@ -226,7 +226,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		</tr>
 		<tr>
 			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Vijay Janna Reddi, Professor</strong></td>
+			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Vijay Janapa Reddi, Professor</strong></td>
 			<td align="left" style="background-color:aqua; vertical-align:middle"> Harvard University </td>
 			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
 		</tr>
