--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
     <div class="w3-content">
       <h2>Speakers</h2>
         <h5 class="w3-text-black">
-
-<li> <strong>Dr. Huaiyu Meng</strong>, Co-Founder & CTO, Lightelligence, Inc </li>
+		<p>
+<li> <strong>Dr. Huaiyu Meng</strong>, Co-Founder & CTO, Lightelligence </li>
 <li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
 <li> <strong>Dr. John Wuu</strong>, Sr Fellow, AMD </li>
 <li> <strong>Eduardo Ramirez</strong>, Vice President, ARM </li>
 <li> <strong>Dr. Debendra Das Sharma</strong>, UCIe Chair, Intel </li>
 <li> <strong>Dr. Sajjad Moazeni</strong>, Professor, University of Washington </li>
 <li> <strong>Dr. Vijay Janapa Reddi</strong>, Professor, Harvard University </li>
-          
+		</p>          
         </h5>
     </div>
   </div>   
