--- a/index.html
+++ b/index.html
@@ -148,6 +148,18 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Speakers</h2>
         <h5 class="w3-text-black">
 		<p>
+<TABLE BORDER=”0″>
+<TR> <td><strong>Dr. Huaiyu Meng</strong>         </td> <td> Co-Founder & CTO </td> <td> Lightelligence </td></tr>
+<TR> <td><strong>Dr. Kaisheng Ma</strong>         </td> <td> Professor </td> <td> Tsinghua University </td></tr>
+<TR> <td><strong>Dr. John Wuu</strong>            </td> <td> Sr Fellow </td> <td> AMD </td></tr>
+<TR> <td><strong>Eduardo Ramirez</strong>         </td> <td> Vice President </td> <td> ARM </td></tr>
+<TR> <td><strong>Dr. Debendra Das Sharma</strong> </td> <td> UCIe Chair</td> <td> Intel </td></tr>
+<TR> <td><strong>Dr. Sajjad Moazeni</strong>      </td> <td> Professor </td> <td>  University of Washington </td></tr>
+<TR> <td><strong>Dr. Vijay Janapa Reddi</strong>  </td> <td> Professor </td> <td> Harvard University </td></tr>
+</table>
+	
+
+<!-- 
 <li> <strong>Dr. Huaiyu Meng</strong>, Co-Founder & CTO, Lightelligence </li>
 <li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
 <li> <strong>Dr. John Wuu</strong>, Sr Fellow, AMD </li>
@@ -155,6 +167,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 <li> <strong>Dr. Debendra Das Sharma</strong>, UCIe Chair, Intel </li>
 <li> <strong>Dr. Sajjad Moazeni</strong>, Professor, University of Washington </li>
 <li> <strong>Dr. Vijay Janapa Reddi</strong>, Professor, Harvard University </li>
+-->
 		</p>          
         </h5>
     </div>
