Fix the table border

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       -webkit-background-size: cover;
       -o-background-size: cover;
     }     
+    table {border: none;}
     h1 {
         font-size: 36px;
     }
@@ -148,14 +149,14 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Speakers</h2>
         <h5 class="w3-text-black">
 		<p>
-<TABLE BORDER=”0″>
-<TR> <td><strong>Dr. Huaiyu Meng</strong>         </td> <td> Co-Founder & CTO </td> <td> Lightelligence </td></tr>
-<TR> <td><strong>Dr. Kaisheng Ma</strong>         </td> <td> Professor </td> <td> Tsinghua University </td></tr>
-<TR> <td><strong>Dr. John Wuu</strong>            </td> <td> Sr Fellow </td> <td> AMD </td></tr>
-<TR> <td><strong>Eduardo Ramirez</strong>         </td> <td> Vice President </td> <td> ARM </td></tr>
-<TR> <td><strong>Dr. Debendra Das Sharma</strong> </td> <td> UCIe Chair</td> <td> Intel </td></tr>
-<TR> <td><strong>Dr. Sajjad Moazeni</strong>      </td> <td> Professor </td> <td>  University of Washington </td></tr>
-<TR> <td><strong>Dr. Vijay Janapa Reddi</strong>  </td> <td> Professor </td> <td> Harvard University </td></tr>
+<table cellspacing="0" cellpadding="0">
+<tr> <td><strong>Dr. Huaiyu Meng</strong>         </td> <td> Co-Founder & CTO </td> <td> Lightelligence </td></tr>
+<tr> <td><strong>Dr. Kaisheng Ma</strong>         </td> <td> Professor </td> <td> Tsinghua University </td></tr>
+<tr> <td><strong>Dr. John Wuu</strong>            </td> <td> Sr Fellow </td> <td> AMD </td></tr>
+<tr> <td><strong>Eduardo Ramirez</strong>         </td> <td> Vice President </td> <td> ARM </td></tr>
+<tr> <td><strong>Dr. Debendra Das Sharma</strong> </td> <td> UCIe Chair</td> <td> Intel </td></tr>
+<tr> <td><strong>Dr. Sajjad Moazeni</strong>      </td> <td> Professor </td> <td>  University of Washington </td></tr>
+<tr> <td><strong>Dr. Vijay Janapa Reddi</strong>  </td> <td> Professor </td> <td> Harvard University </td></tr>
 </table>
 	
 
