Add cell spacing

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Speakers</h2>
         <h5 class="w3-text-black">
 		<p>
-<table cellspacing="0" cellpadding="0">
+<table cellspacing="1" cellpadding="1">
 <tr> <td><strong>Dr. Huaiyu Meng</strong>         </td> <td> Co-Founder & CTO </td> <td> Lightelligence </td></tr>
 <tr> <td><strong>Dr. Kaisheng Ma</strong>         </td> <td> Professor </td> <td> Tsinghua University </td></tr>
 <tr> <td><strong>Dr. John Wuu</strong>            </td> <td> Sr Fellow </td> <td> AMD </td></tr>
@@ -160,7 +160,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 </table>
 	
 
-<!-- 
+<!-- List Style --
 <li> <strong>Dr. Huaiyu Meng</strong>, Co-Founder & CTO, Lightelligence </li>
 <li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
 <li> <strong>Dr. John Wuu</strong>, Sr Fellow, AMD </li>
