add background color to the rows

--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
         <h5 class="w3-text-black">
 		<p>
 <table cellspacing="1" cellpadding="1">
-<tr> <td><strong>Dr. Huaiyu Meng</strong>         </td> <td> Co-Founder & CTO </td> <td> Lightelligence </td></tr>
-<tr> <td><strong>Dr. Kaisheng Ma</strong>         </td> <td> Professor </td> <td> Tsinghua University </td></tr>
-<tr> <td><strong>Dr. John Wuu</strong>            </td> <td> Sr Fellow </td> <td> AMD </td></tr>
-<tr> <td><strong>Eduardo Ramirez</strong>         </td> <td> Vice President </td> <td> ARM </td></tr>
-<tr> <td><strong>Dr. Debendra Das Sharma</strong> </td> <td> UCIe Chair</td> <td> Intel </td></tr>
-<tr> <td><strong>Dr. Sajjad Moazeni</strong>      </td> <td> Professor </td> <td>  University of Washington </td></tr>
-<tr> <td><strong>Dr. Vijay Janapa Reddi</strong>  </td> <td> Professor </td> <td> Harvard University </td></tr>
+<tr style="background-color:lightgray"> <td><strong>Dr. Huaiyu Meng</strong>,         </td> <td> Co-Founder & CTO, </td> <td> Lightelligence </td></tr>
+<tr> <td><strong>Dr. Kaisheng Ma</strong>,         </td> <td> Professor, </td> <td> Tsinghua University </td></tr>
+<tr style="background-color:lightgray"> <td><strong>Dr. John Wuu</strong>,            </td> <td> Sr Fellow, </td> <td> AMD </td></tr>
+<tr> <td><strong>Eduardo Ramirez</strong>,         </td> <td> Vice President, </td> <td> ARM </td></tr>
+<tr style="background-color:lightgray"> <td><strong>Dr. Debendra Das Sharma</strong>, </td> <td> UCIe Chair,</td> <td> Intel </td></tr>
+<tr> <td><strong>Dr. Sajjad Moazeni</strong>,      </td> <td> Professor, </td> <td>  University of Washington </td></tr>
+<tr style="background-color:lightgray"> <td><strong>Dr. Vijay Janapa Reddi</strong>,  </td> <td> Professor, </td> <td> Harvard University </td></tr>
 </table>
 	
 
