--- a/index.html
+++ b/index.html
@@ -149,18 +149,20 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Speakers</h2>
         <h5 class="w3-text-black">
 		<p>
+<!-- Table Style
 <table cellspacing="1" cellpadding="1">
-<tr style="background-color:lightgray"> <td><strong>Dr. Huaiyu Meng</strong>,         </td> <td> Co-Founder & CTO, </td> <td> Lightelligence </td></tr>
-<tr> <td><strong>Dr. Kaisheng Ma</strong>,         </td> <td> Professor, </td> <td> Tsinghua University </td></tr>
-<tr style="background-color:lightgray"> <td><strong>Dr. John Wuu</strong>,            </td> <td> Sr Fellow, </td> <td> AMD </td></tr>
-<tr> <td><strong>Eduardo Ramirez</strong>,         </td> <td> Vice President, </td> <td> ARM </td></tr>
-<tr style="background-color:lightgray"> <td><strong>Dr. Debendra Das Sharma</strong>, </td> <td> UCIe Chair,</td> <td> Intel </td></tr>
-<tr> <td><strong>Dr. Sajjad Moazeni</strong>,      </td> <td> Professor, </td> <td>  University of Washington </td></tr>
-<tr style="background-color:lightgray"> <td><strong>Dr. Vijay Janapa Reddi</strong>,  </td> <td> Professor, </td> <td> Harvard University </td></tr>
+<tr style="background-color:#F0F0F0"> <td><bold>Dr. Huaiyu Meng</bold>,         </td> <td> Co-Founder & CTO, </td> <td> Lightelligence </td></tr>
+<tr> <td><bold>Dr. Kaisheng Ma</bold>,         </td> <td> Professor, </td> <td> Tsinghua University </td></tr>
+<tr style="background-color:#F0F0F0"> <td><bold>Dr. John Wuu</bold>,            </td> <td> Sr Fellow, </td> <td> AMD </td></tr>
+<tr> <td><bold>Eduardo Ramirez</bold>,         </td> <td> Vice President, </td> <td> ARM </td></tr>
+<tr style="background-color:#F0F0F0"> <td><bold>Dr. Debendra Das Sharma</bold>, </td> <td> UCIe Chair,</td> <td> Intel </td></tr>
+<tr> <td><bold>Dr. Sajjad Moazeni</bold>,      </td> <td> Professor, </td> <td>  University of Washington </td></tr>
+<tr style="background-color:#F0F0F0"> <td><bold>Dr. Vijay Janapa Reddi</bold>,  </td> <td> Professor, </td> <td> Harvard University </td></tr>
 </table>
-	
+-->	
 
-<!-- List Style --
+<!-- List Style -->
+<ul style="list-style: none;">
 <li> <strong>Dr. Huaiyu Meng</strong>, Co-Founder & CTO, Lightelligence </li>
 <li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
 <li> <strong>Dr. John Wuu</strong>, Sr Fellow, AMD </li>
@@ -168,7 +170,8 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 <li> <strong>Dr. Debendra Das Sharma</strong>, UCIe Chair, Intel </li>
 <li> <strong>Dr. Sajjad Moazeni</strong>, Professor, University of Washington </li>
 <li> <strong>Dr. Vijay Janapa Reddi</strong>, Professor, Harvard University </li>
--->
+</ul>
+
 		</p>          
         </h5>
     </div>
