Add the new schedule with speakers and titles

--- a/index.html
+++ b/index.html
@@ -182,80 +182,79 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Schedule</h2>
         <h5 class="w3-text-black">
           <p>Sunday Feb 26th, 2023, 1:00pm - 5:00pm (local time)</p>
-          <p>Under planing.</p>
-<!-- 
+          <p>
+		  
  <table border="1" cellpadding="0" cellspacing="0" style="width:100%">
 	<tbody>
 		<tr>
 			<th>Session</th>
 			<th>Speaker</th>
-			<th>Institution(Company)</th>
 			<th>Title</th>
+			<th>Notes</th>
 		</tr>
 		<tr>
-			<td align="left" style="vertical-align:middle">Open Remarks</td>
-			<td align="left" style="vertical-align:middle">Dharmesh Jani, Co-Chair of OCP Incubation</td>
-			<td align="left" style="vertical-align:middle"> &nbsp;</td>
-			<td align="center" style="vertical-align:middle"> &nbsp;</td>
+			<td align="left">Open Remarks</td>
+			<td align="left">Dharmesh Jani<br>Co-Chair of OCP Incubation</td>
+			<td align="left"> Chiplets for AI/ML: challenges and opportunities </td>
+			<td align="center"> &nbsp;</td>
+		</tr>
+		<tr style="background-color:lightgray; vertical-align:middle">
+			<td align="left"> Invited talk </td>
+			<td align="left">Dr. Huaiyu Meng<br> Co-Founder & CTO</td>
+			<td align="left"> Optical Network-on-Chip for large scale chiplet architectures </td>
+			<td align="center"> &nbsp; </td>
 		</tr>
 		<tr>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Huaiyu Meng, Co-Founder & CTO</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"> Lightelligence, Inc </td>
-			<td align="center" style="background-color:aqua; vertical-align:middle"></td>
+			<td align="left">Invited talk</td>
+			<td align="left">Dr. Kaisheng Ma<br>Professor</td>
+			<td align="left"> A Scalable Methodology for Designing Efficient Interconnection Network of Chiplets</td>
+			<td align="center"> &nbsp;</td>
+		</tr>
+		<tr style="background-color:lightgray; vertical-align:middle">
+			<td align="left"> Invited talk </td>
+			<td align="left">John Wuu & Nathan <br> Sr Fellow</td>
+			<td align="left"> Chiplet’s March to the 3D V-Cache™ and Beyond (TBD) </td>
+			<td align="center"> &nbsp; </td>
 		</tr>
 		<tr>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Kaisheng Ma, Professor</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle">Tsinghua University</td>
-			<td align="center" style="background-color:aqua; vertical-align:middle">  &nbsp; </td>
+			<td align="left">Invited talk</td>
+			<td align="left"> Eduardo Ramirez<br> VP</td>
+			<td align="left"> Building Heterogeneous Chiplets with AMBA Interconnects </td>
+			<td align="center"> &nbsp;</td>
+		</tr>
+		<tr style="background-color:lightgray; vertical-align:middle">
+			<td align="left"> Coffee Break </td>
+			<td align="left"> &nbsp; </td>
+			<td align="left"> &nbsp; </td>
+			<td align="center"> &nbsp; </td>
 		</tr>
 		<tr>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>John Wuu & Nathan, Sr Fellow</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"> AMD </td>
-			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
+			<td align="left">Invited talk</td>
+			<td align="left"> Dr. Debendra Das Sharma<br> UCIe Chair </td>
+			<td align="left"> Universal Chiplet Interconnect Express (UCIe)TM : An open standard for innovations at the package level </td>
+			<td align="center"> &nbsp;</td>
 		</tr>
-    <tr>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Eduardo Ramirez, VP</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"> ARM </td>
-			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
-		</tr>
-
-		<tr>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Coffee Break</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"> &nbsp;  </td>
-			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp;</td>
+		<tr style="background-color:lightgray; vertical-align:middle">
+			<td align="left"> Invited Talk </td>
+			<td align="left"> Dr. Sajjad Moazeni<br> Professor </td>
+			<td align="left"> Next Generation Co-Packaged Optics for Future Disaggregated AI System </td>
+			<td align="center"> &nbsp; </td>
 		</tr>
 		<tr>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Debendra Das Sharma, UCIe Chair</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"> Intel </td>
-			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
-		</tr>    
-		<tr>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Sajjad Moazeni, Professor</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"> University of Washington </td>
-			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
+			<td align="left">Invited talk</td>
+			<td align="left"> Dr. Vijay Janapa Reddi<br> Professor </td>
+			<td align="left"> Scalable Chiplet Architecture for HPC and Science (TBD) </td>
+			<td align="center"> &nbsp;</td>
 		</tr>
-		<tr>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Invited talk</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Vijay Janapa Reddi, Professor</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"> Harvard University </td>
-			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
-		</tr>
-		<tr>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Close Remark</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"><strong>Dr. Weifeng Zhang, Chief Architect & VP</strong></td>
-			<td align="left" style="background-color:aqua; vertical-align:middle"> &nbsp; </td>
-			<td align="center" style="background-color:aqua; vertical-align:middle"> &nbsp;</td>
+		<tr style="background-color:lightgray; vertical-align:middle">
+			<td align="left"> Close Remark </td>
+			<td align="left"> Dr. Weifeng Zhang<br> Chief Architect & VP </td>
+			<td align="left"> Polymorphic Chiplet Architecture for Future AI Applications </td>
+			<td align="center"> &nbsp; </td>
 		</tr>
   </tbody>
  </table>
--->
+		</p>
 		
 	</h5>
     </div>
