--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Schedule</h2>
         <h5 class="w3-text-black">
           <p>Sunday Feb 26th, 2023, 1:00pm - 5:00pm (local time)</p>
-          <p>
+          <p  style="font-size:14px; ">
 		  
- <table border="1" cellpadding="0" cellspacing="0" style="width:100%">
+ <table cellpadding="0" cellspacing="0" style="width:100%">
 	<tbody>
 		<tr>
 			<th>Session</th>
@@ -193,8 +193,8 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<th>Notes</th>
 		</tr>
 		<tr>
-			<td align="left">Open Remarks</td>
-			<td align="left">Dharmesh Jani<br>Co-Chair of OCP Incubation</td>
+			<td align="left">Open Remark</td>
+			<td align="left">Dharmesh Jani <br> Co-Chair</td>
 			<td align="left"> Chiplets for AI/ML: challenges and opportunities </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
@@ -242,13 +242,13 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		</tr>
 		<tr>
 			<td align="left">Invited talk</td>
-			<td align="left"> Dr. Vijay Janapa Reddi<br> Professor </td>
+			<td align="left"> Dr. Vijay Janapa Reddi<br> Co-Chair </td>
 			<td align="left"> Scalable Chiplet Architecture for HPC and Science (TBD) </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Close Remark </td>
-			<td align="left"> Dr. Weifeng Zhang<br> Chief Architect & VP </td>
+			<td align="left"> Dr. Weifeng Zhang<br> Co-Chair </td>
 			<td align="left"> Polymorphic Chiplet Architecture for Future AI Applications </td>
 			<td align="center"> &nbsp; </td>
 		</tr>
