--- a/index.html
+++ b/index.html
@@ -182,15 +182,15 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Schedule</h2>
         <h5 class="w3-text-black">
           <p>Sunday Feb 26th, 2023, 1:00pm - 5:00pm (local time)</p>
-          <p  style="font-size:14px; ">
+          <p  style="font-size:11px; ">
 		  
  <table cellpadding="0" cellspacing="0" style="width:100%">
 	<tbody>
-		<tr>
-			<th>Session</th>
-			<th>Speaker</th>
-			<th>Title</th>
-			<th>Notes</th>
+		<tr style="background-color:lightgray; vertical-align:middle">
+			<th width="10%">Session</th>
+			<th width="25%">Speaker</th>
+			<th width="50%">Title</th>
+			<th width="15%">Notes</th>
 		</tr>
 		<tr>
 			<td align="left">Open Remark</td>
