--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Schedule</h2>
         <h5 class="w3-text-black">
           <p>Sunday Feb 26th, 2023, 1:00pm - 5:00pm (local time)</p>
-          <p  style="font-size:10px; ">
+          <p  style="font-size:8px; ">
 		  
  <table cellpadding="0" cellspacing="0" style="width:100%">
 	<tbody>
-		<tr style="background-color:lightgray; vertical-align:middle">
+		<tr style="background-color:lightblue; vertical-align:middle">
 			<th width="15%">Session</th>
 			<th width="20%">Speaker</th>
 			<th width="50%">Title</th>
@@ -222,7 +222,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 			<td align="left"> Building Heterogeneous Chiplets with AMBA Interconnects </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
-		<tr style="background-color:lightgray; vertical-align:middle">
+		<tr style="background-color:lightblue; vertical-align:middle">
 			<td align="left"> Coffee Break </td>
 			<td align="left"> &nbsp; </td>
 			<td align="left"> &nbsp; </td>
