Fix the title for close remark

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Close Remark </td>
 			<td align="left"> Dr. Weifeng Zhang<br> Co-Chair </td>
-			<td align="left"> Polymorphic Chiplet Architecture for Future AI Applications </td>
+			<td align="left"> Polymorphic AI Accelerator Architecture via Composable Chiplet and Interconnect Technologies</td>
 			<td align="center"> &nbsp; </td>
 		</tr>
   </tbody>
