Add a right navigation to HiPChips.org

--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
     <a href="#schedule" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-blue">Schedule</a>
     <a href="#venue" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-blue">Venue</a>
  </div>
+ <div class="w3-bar w3-grayscale-min w3-card w3-right-align w3-large" style="width:min-content; opacity:70%; float:right">
+    <a href="https://hipchips.github.io/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-blue"><font color="green">HiPChips.org</font></a>
+ </div>	
 </div>
-  
+	
 <!-- Header with image -->
 <header class= "bgimg w3-display-container w3-grayscale-min" style="background-color:lightgray" id="home">
   <div class="w3-display-middle w3-center">
