--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 <li> <strong>Dr. Huaiyu Meng</strong>, Co-Founder & CTO, Lightelligence </li>
 <li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
 <li> <strong>Dr. John Wuu</strong>, Sr Fellow, AMD </li>
-<li> <strong>Eduardo Ramirez</strong>, Vice President, ARM </li>
-<li> <strong>Dr. Debendra Das Sharma</strong>, UCIe Chair, Intel </li>
+<li> <strong>Jeff Defilippi</strong>, Sr Director Product Management, ARM </li>
+<li> <strong>Dr. Debendra Das Sharma</strong>, UCIe Chair, Sr Fellow, Intel </li>
 <li> <strong>Dr. Sajjad Moazeni</strong>, Professor, University of Washington </li>
 <li> <strong>Dr. Vijay Janapa Reddi</strong>, Professor, Harvard University </li>
 </ul>
@@ -221,7 +221,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		</tr>
 		<tr>
 			<td align="left">Invited talk</td>
-			<td align="left"> Eduardo Ramirez<br> VP</td>
+			<td align="left"> Jeff Defilippi<br> Sr Director</td>
 			<td align="left"> Building Heterogeneous Chiplets with AMBA Interconnects </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
