--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 <tr style="background-color:#F0F0F0"> <td><bold>Dr. Huaiyu Meng</bold>,         </td> <td> Co-Founder & CTO, </td> <td> Lightelligence </td></tr>
 <tr> <td><bold>Dr. Kaisheng Ma</bold>,         </td> <td> Professor, </td> <td> Tsinghua University </td></tr>
 <tr style="background-color:#F0F0F0"> <td><bold>Dr. John Wuu</bold>,            </td> <td> Sr Fellow, </td> <td> AMD </td></tr>
-<tr> <td><bold>Eduardo Ramirez</bold>,         </td> <td> Vice President, </td> <td> ARM </td></tr>
+<tr> <td><bold>Jeff Defilippi</bold>,         </td> <td> Sr Director Product Management, </td> <td> ARM </td></tr>
 <tr style="background-color:#F0F0F0"> <td><bold>Dr. Debendra Das Sharma</bold>, </td> <td> UCIe Chair,</td> <td> Intel </td></tr>
 <tr> <td><bold>Dr. Sajjad Moazeni</bold>,      </td> <td> Professor, </td> <td>  University of Washington </td></tr>
 <tr style="background-color:#F0F0F0"> <td><bold>Dr. Vijay Janapa Reddi</bold>,  </td> <td> Professor, </td> <td> Harvard University </td></tr>
