Fix Cliff's title

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 <li> <strong>Dr. Debendra Das Sharma</strong>, UCIe Chair, Sr Fellow, Intel </li>
 <li> <strong>Dr. Sajjad Moazeni</strong>, Professor, University of Washington </li>
 <li> <strong>Dr. Vijay Janapa Reddi</strong>, Professor, Harvard University </li>
-<li> <strong>Dr. Cliff Grossner</strong>, VP of Marketing Intelligence, OCP </li>
+<li> <strong>Dr. Cliff Grossner</strong>, VP of Marketing Intelligence & Innovation, OCP </li>
 </ul>
 		</p>          
         </h5>
@@ -245,7 +245,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		</tr>
 		<tr>
 			<td align="left">Invited talk</td>
-			<td align="left"> Dr. Dr. Cliff Grossner <br> VP Marketing Intelligence & Innovation </td>
+			<td align="left"> Dr. Dr. Cliff Grossner <br> VP of OCP </td>
 			<td align="left"> Establishing a New Open Chiplet Economy </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
