Add nathan's name

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 <ul style="list-style: none;">
 <li> <strong>Dr. Huaiyu Meng</strong>, Co-Founder & CTO, Lightelligence </li>
 <li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
-<li> <strong>Dr. John Wuu & Nathan</strong>, Sr Fellow, AMD </li>
+<li> <strong>Dr. John Wuu & Nathan Kalyanasundaram </strong>, Sr Fellow, AMD </li>
 <li> <strong>Jeff Defilippi</strong>, Sr Director Product Management, ARM </li>
 <li> <strong>Dr. Debendra Das Sharma</strong>, UCIe Chair, Sr Fellow, Intel </li>
 <li> <strong>Dr. Sajjad Moazeni</strong>, Professor, University of Washington </li>
@@ -245,7 +245,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		</tr>
 		<tr>
 			<td align="left">Invited talk</td>
-			<td align="left"> Dr. Dr. Cliff Grossner <br> VP of OCP </td>
+			<td align="left"> Dr. Cliff Grossner <br> VP of OCP </td>
 			<td align="left"> Establishing a New Open Chiplet Economy </td>
 			<td align="center"> &nbsp;</td>
 		</tr>
