Replace the presentation title for AMD

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 <ul style="list-style: none;">
 <li> <strong>Dr. Huaiyu Meng</strong>, Co-Founder & CTO, Lightelligence </li>
 <li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
-<li> <strong>Dr. John Wuu & Nathan Kalyanasundaram </strong>, Sr Fellow, AMD </li>
+<li> <strong>Dr. John Wuu & Nathan Kalyanasundharam </strong>, Sr Fellow, AMD </li>
 <li> <strong>Jeff Defilippi</strong>, Sr Director Product Management, ARM </li>
 <li> <strong>Dr. Debendra Das Sharma</strong>, UCIe Chair, Sr Fellow, Intel </li>
 <li> <strong>Dr. Sajjad Moazeni</strong>, Professor, University of Washington </li>
@@ -215,8 +215,8 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Invited talk </td>
-			<td align="left">John Wuu & Nathan <br> Sr Fellow</td>
-			<td align="left"> Chiplet’s March to the 3D V-Cache™ and Beyond (TBD) </td>
+			<td align="left">Nathan K. & John Wuu <br> Sr Fellow</td>
+			<td align="left"> Challenges and Obstacles to Overcome to Reach Chiplet Nirvana </td>
 			<td align="center"> &nbsp; </td>
 		</tr>
 		<tr>
