Fix the talk title

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		<tr>
 			<td align="left"> Close Remark </td>
 			<td align="left"> Dr. Weifeng Zhang<br> Co-Chair </td>
-			<td align="left"> Polymorphic AI Accelerator Architecture via Composable Chiplet and Interconnect Technologies</td>
+			<td align="left"> Polymorphic AI Accelerator Architecture via Composable Chiplet Technologies</td>
 			<td align="center"> &nbsp; </td>
 		</tr>
   </tbody>
