Add linkedin profile to speakers

--- a/index.html
+++ b/index.html
@@ -166,14 +166,15 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 
 <!-- List Style -->
 <ul style="list-style: none;">
-<li> <strong>Dr. Huaiyu Meng</strong>, Co-Founder & CTO, Lightelligence </li>
+<li> <strong><a href="https://www.linkedin.com/in/huaiyu-meng-67924651/">Dr. Huaiyu Meng></a></strong>, Co-Founder & CTO, Lightelligence </li>
 <li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
-<li> <strong>Dr. John Wuu & Nathan Kalyanasundharam </strong>, Sr Fellow, AMD </li>
-<li> <strong>Jeff Defilippi</strong>, Sr Director Product Management, ARM </li>
-<li> <strong>Dr. Debendra Das Sharma</strong>, UCIe Chair, Sr Fellow, Intel </li>
-<li> <strong>Dr. Sajjad Moazeni</strong>, Professor, University of Washington </li>
-<li> <strong>Dr. Vijay Janapa Reddi</strong>, Professor, Harvard University </li>
-<li> <strong>Dr. Cliff Grossner</strong>, VP of Marketing Intelligence & Innovation, OCP </li>
+<li> <strong><a href="https://www.linkedin.com/in/john-wuu-15b0b736/">Dr. John Wuu</a></strong> Sr Fellow, AMD <br>
+             <a href="https://www.linkedin.com/in/nathan-kalyanasundharam-5b95943/">Nathan Kalyanasundharam</a> </strong>, Coorporate Fellow, AMD </li>
+<li> <strong><a href="https://www.linkedin.com/in/jeff-defilippi-2012a62/">Jeff Defilippi</a></strong>, Sr Director Product Management, ARM </li>
+<li> <strong><a href="https://www.linkedin.com/in/debendra-das-sharma-72514918/">Dr. Debendra Das Sharma</a></strong>, UCIe Chair, Sr Fellow, Intel </li>
+<li> <strong><a href="https://www.linkedin.com/in/sajjad-moazeni-a7925339/">Dr. Sajjad Moazeni</a></strong>, Professor, University of Washington </li>
+<li> <strong><a href="https://www.linkedin.com/in/vijay-janapa-reddi-63a6a173/">Dr. Vijay Janapa Reddi</a></strong>, Professor, Harvard University </li>
+<li> <strong><a href="https://www.linkedin.com/in/cliff-grossner-ph-d-9194871/">Dr. Cliff Grossner</a></strong>, VP of Marketing Intelligence & Innovation, OCP </li>
 </ul>
 		</p>          
         </h5>
