Fix the speaker linkedin info

--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 
 <!-- List Style -->
 <ul style="list-style: none;">
-<li> <strong><a href="https://www.linkedin.com/in/huaiyu-meng-67924651/">Dr. Huaiyu Meng></a></strong>, Co-Founder & CTO, Lightelligence </li>
+<li> <strong><a href="https://www.linkedin.com/in/huaiyu-meng-67924651/">Dr. Huaiyu Meng</a></strong>, Co-Founder & CTO, Lightelligence </li>
 <li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
-<li> <strong><a href="https://www.linkedin.com/in/john-wuu-15b0b736/">Dr. John Wuu</a></strong> Sr Fellow, AMD <br>
-             <a href="https://www.linkedin.com/in/nathan-kalyanasundharam-5b95943/">Nathan Kalyanasundharam</a> </strong>, Coorporate Fellow, AMD </li>
+<li> <strong><a href="https://www.linkedin.com/in/john-wuu-15b0b736/">Dr. John Wuu</a></strong>, Sr Fellow, AMD </li>
+<li> <strong><a href="https://www.linkedin.com/in/nathan-kalyanasundharam-5b95943/">Nathan Kalyanasundharam</a> </strong>, Coorporate Fellow, AMD </li>
 <li> <strong><a href="https://www.linkedin.com/in/jeff-defilippi-2012a62/">Jeff Defilippi</a></strong>, Sr Director Product Management, ARM </li>
 <li> <strong><a href="https://www.linkedin.com/in/debendra-das-sharma-72514918/">Dr. Debendra Das Sharma</a></strong>, UCIe Chair, Sr Fellow, Intel </li>
 <li> <strong><a href="https://www.linkedin.com/in/sajjad-moazeni-a7925339/">Dr. Sajjad Moazeni</a></strong>, Professor, University of Washington </li>
@@ -216,7 +216,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 		</tr>
 		<tr style="background-color:lightgray; vertical-align:middle">
 			<td align="left"> Invited talk </td>
-			<td align="left">Nathan K. & John Wuu <br> Sr Fellow</td>
+			<td align="left">Nathan K. <br> Cooporate Fellow<br> John Wuu <br> Sr Fellow</td>
 			<td align="left"> Challenges and Obstacles to Overcome to Reach Chiplet Nirvana </td>
 			<td align="center"> &nbsp; </td>
 		</tr>
