--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 <!-- List Style -->
 <ul style="list-style: none;">
 <li> <strong><a href="https://www.linkedin.com/in/huaiyu-meng-67924651/">Dr. Huaiyu Meng</a></strong>, Co-Founder & CTO, Lightelligence </li>
-<li> <strong>Dr. Kaisheng Ma</strong>, Professor, Tsinghua University </li>
+<li> <strong><a href="https://www.linkedin.com/in/kaisheng-ma-a1613561/">Dr. Kaisheng Ma</a></strong>, Professor, Tsinghua University </li>
 <li> <strong><a href="https://www.linkedin.com/in/john-wuu-15b0b736/">Dr. John Wuu</a></strong>, Sr Fellow, AMD </li>
 <li> <strong><a href="https://www.linkedin.com/in/nathan-kalyanasundharam-5b95943/">Nathan Kalyanasundharam</a> </strong>, Coorporate Fellow, AMD </li>
 <li> <strong><a href="https://www.linkedin.com/in/jeff-defilippi-2012a62/">Jeff Defilippi</a></strong>, Sr Director Product Management, ARM </li>
