--- a/index.html
+++ b/index.html
@@ -152,19 +152,87 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
       <h2>Speakers</h2>
         <h5 class="w3-text-black">
 		<p>
-<!-- Table Style
-<table cellspacing="1" cellpadding="1">
-<tr style="background-color:#F0F0F0"> <td><bold>Dr. Huaiyu Meng</bold>,         </td> <td> Co-Founder & CTO, </td> <td> Lightelligence </td></tr>
-<tr> <td><bold>Dr. Kaisheng Ma</bold>,         </td> <td> Professor, </td> <td> Tsinghua University </td></tr>
-<tr style="background-color:#F0F0F0"> <td><bold>Dr. John Wuu</bold>,            </td> <td> Sr Fellow, </td> <td> AMD </td></tr>
-<tr> <td><bold>Jeff Defilippi</bold>,         </td> <td> Sr Director Product Management, </td> <td> ARM </td></tr>
-<tr style="background-color:#F0F0F0"> <td><bold>Dr. Debendra Das Sharma</bold>, </td> <td> UCIe Chair,</td> <td> Intel </td></tr>
-<tr> <td><bold>Dr. Sajjad Moazeni</bold>,      </td> <td> Professor, </td> <td>  University of Washington </td></tr>
-<tr style="background-color:#F0F0F0"> <td><bold>Dr. Vijay Janapa Reddi</bold>,  </td> <td> Professor, </td> <td> Harvard University </td></tr>
-</table>
--->	
+<!-- Table Style -->
+<table cellpadding="0" cellspacing="0" style="width:90%">
+	<tbody>
+    <tr style="vertical-align:middle">
+			<td width="30%" align="center"><img src="./portraits/portrait-huaiyu.png" height="auto" </td>
+			<td width="70%" align="left" style="background-color:#F0F0F0;">
+        <strong><a href="https://www.linkedin.com/in/huaiyu-meng-67924651/">Dr. Huaiyu Meng</a></strong><br>
+        Co-Founder & CTO, Lightelligence <br>
+        &nbsp;
+       </td>
+		</tr>
+    <tr style="vertical-align:middle">
+			<td width="15%" align="center"><img src="./portraits/portrait-kaisheng.png" height="auto" </td>
+			<td width="20%" align="left">
+        <strong><a href="https://www.linkedin.com/in/kaisheng-ma-a1613561/">Dr. Kaisheng Ma</a></strong><br>
+        Professor, Tsinghua University <br>
+        &nbsp;
+       </td>
+		</tr>
+    <tr style="vertical-align:middle">
+			<td width="15%" align="center"><img src="./portraits/portrait-john.png" height="auto" </td>
+			<td width="20%" align="left" style="background-color:#F0F0F0;">
+        <strong><a href="https://www.linkedin.com/in/john-wuu-15b0b736/">Dr. John Wuu</a></strong><br>
+        Sr Fellow, AMD <br>
+        &nbsp;
+       </td>
+		</tr>
+    <tr style="vertical-align:middle">
+			<td width="15%" align="center"><img src="./portraits/portrait-nathan.png" height="auto" </td>
+			<td width="20%" align="left">
+        <strong><a href="https://www.linkedin.com/in/nathan-kalyanasundharam-5b95943/">Nathan Kalyanasundharam</a></strong><br>
+        Coorporate Fellow, AMD <br>
+        &nbsp;
+       </td>
+		</tr>
+    <tr style="vertical-align:middle">
+			<td width="15%" align="center"><img src="./portraits/portrait-jeff.png" height="auto" </td>
+			<td width="20%" align="left" style="background-color:#F0F0F0;">
+        <strong><a href="https://www.linkedin.com/in/jeff-defilippi-2012a62/">Jeff Defilippi</a></strong><br>
+        Sr Director Product Management, ARM <br>
+        &nbsp;
+       </td>
+		</tr>
+    <tr style="vertical-align:middle">
+			<td width="15%" align="center"><img src="./portraits/portrait-deb.png" height="auto" </td>
+			<td width="20%" align="left">
+        <strong><a href="https://www.linkedin.com/in/debendra-das-sharma-72514918/">Dr. Debendra Das Sharma</a></strong><br>
+        UCIe Chair, Sr Fellow, Intel <br>
+        &nbsp;
+       </td>
+		</tr>
 
-<!-- List Style -->
+    <tr style="vertical-align:middle">
+			<td width="15%" align="center"><img src="./portraits/portrait-sajjad.png" height="auto" </td>
+			<td width="20%" align="left" style="background-color:#F0F0F0;">
+        <strong><a href="https://www.linkedin.com/in/sajjad-moazeni-a7925339/">Dr. Sajjad Moazeni</a></strong><br>
+        Professor, University of Washington <br>
+        &nbsp;
+       </td>
+		</tr>
+    <tr style="vertical-align:middle">
+			<td width="15%" align="center"><img src="./portraits/portrait-vijay.png" height="auto" </td>
+			<td width="20%" align="left">
+        <strong><a href="https://www.linkedin.com/in/vijay-janapa-reddi-63a6a173/">Dr. Vijay Janapa Reddi</a></strong><br>
+        Professor, Harvard University <br>
+        &nbsp;
+       </td>
+		</tr>
+
+    <tr style="vertical-align:middle">
+			<td width="15%" align="center"><img src="./portraits/portrait-cliff.png" height="auto" </td>
+			<td width="20%" align="left" style="background-color:#F0F0F0;">
+        <strong><a href="https://www.linkedin.com/in/cliff-grossner-ph-d-9194871/">Dr. Cliff Grossner</a></strong><br>
+        VP of Marketing Intelligence & Innovation, OCP <br>
+        &nbsp;
+       </td>
+		</tr>
+      </tbody>
+</table>	
+
+<!-- List Style 
 <ul style="list-style: none;">
 <li> <strong><a href="https://www.linkedin.com/in/huaiyu-meng-67924651/">Dr. Huaiyu Meng</a></strong>, Co-Founder & CTO, Lightelligence </li>
 <li> <strong><a href="https://www.linkedin.com/in/kaisheng-ma-a1613561/">Dr. Kaisheng Ma</a></strong>, Professor, Tsinghua University </li>
@@ -176,6 +244,7 @@ as well as in startups building zero to one businesses. He has BTech from IIT-Bo
 <li> <strong><a href="https://www.linkedin.com/in/vijay-janapa-reddi-63a6a173/">Dr. Vijay Janapa Reddi</a></strong>, Professor, Harvard University </li>
 <li> <strong><a href="https://www.linkedin.com/in/cliff-grossner-ph-d-9194871/">Dr. Cliff Grossner</a></strong>, VP of Marketing Intelligence & Innovation, OCP </li>
 </ul>
+-->
 		</p>          
         </h5>
     </div>
